api hecha con mongo

--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">
+        <a class="navbar-brand" routerLink="/">
             <img src="assets/img/apple.png" alt="logo de la web" width="50">
             TGT
         </a>
@@ -13,8 +13,8 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul id="menuNav" class="navbar-nav ml-auto ms-auto">
-                <li class="nav-item"><a class="nav-link">Home</a></li>
-                <li class="nav-item"><a class="nav-link" >Restaurantes</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/restaurantes" >Restaurantes</a></li>
                 <!--Aqui hay que colocar un submenu-->
             </ul>
         </div>
