--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-nav></app-nav>
-
-<app-restaurantes></app-restaurantes>
-
-<app-footer>
-</app-footer>
+<div class="container footer-abajo">
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
