--- a/src/app/componentes/restaurantes/restaurantes.component.css
+++ b/src/app/componentes/restaurantes/restaurantes.component.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+*{
+    font-family: 'Roboto', sans-serif !important;
+}
 .buscador{
     margin-top: 30px;
     padding: 10px;
