coleccion de usuarios creada

--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -15,6 +15,7 @@
             <ul id="menuNav" class="navbar-nav ml-auto ms-auto">
                 <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/restaurantes" >Restaurantes</a></li>
+                <a id="btn-login" class="btn btn-danger rounded" routerLink="/" role="button">Login</a>
                 <!--Aqui hay que colocar un submenu-->
             </ul>
         </div>
