--- a/src/app/componentes/nav/nav.component.css
+++ b/src/app/componentes/nav/nav.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+
 .navbar-brand{
     font-family: 'Roboto', sans-serif !important;
     font-weight: 500;
@@ -5,4 +7,8 @@
 .nav-link{
     font-family: 'Roboto', sans-serif !important;
     font-weight: 400;
+}
+
+.btn-login{
+    font-family: 'Roboto', sans-serif !important;
 }
