--- a/src/app/componentes/restaurantes/restaurantes.component.css
+++ b/src/app/componentes/restaurantes/restaurantes.component.css
@@ -25,6 +25,30 @@
     border: 1px solid rgba(128, 128, 128, 0.466);
 }
 .imagenRestaurante img{
-    width: 20em;
+    width: 16em;
+    height: 200px;
+    margin: 20px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+.datosRestaurante{
+    font-family: 'Roboto', sans-serif !important;
+    font-weight: 500;
     padding: 20px;
+}
+.masInfo{
+    width: 25px;
+}
+.imagenRestaurante{
+    cursor: pointer;
+}
+.cardRestaurante{
+    background-color: #F9F7F7;
+}
+.btn-tipo{
+    font-weight: 500;
+    letter-spacing: 1px;
+}
+.nombre-localidad{
+    font-weight: 300 !important;
 }
