--- a/src/app/componentes/restaurantes/restaurantes.component.html
+++ b/src/app/componentes/restaurantes/restaurantes.component.html
@@ -1,11 +1,11 @@
 <div class="row">
     <div class="col d-flex justify-content-center">
         <div class="buscador d-sm-flex align-items-sm-center ">
-            <div class="tipoBusqueda p-3 border border-secondary me-sm-2">
+            <div class="tipoBusqueda p-3 border border-secondary me-sm-2 mb-2">
                 <fa-icon [icon]="faUtensils" size="lg"></fa-icon>
                 <input type="text" class="rounded-pill bordeInputs mx-2" placeholder="Asador">
             </div>
-            <div class="ciudadBusqueda p-3 border border-secondary">
+            <div class="ciudadBusqueda p-3 border border-secondary mb-2">
                 <fa-icon [icon]="faStore" size="lg"></fa-icon>
                 <input type="text" class="rounded-pill bordeInputs mx-2" placeholder="Madrid">
             </div>
@@ -18,24 +18,25 @@
 
 <div class="row my-5">
     <div class="col">
-        <h1 class="display-5">Los mejores restaurantes de Madrid </h1>
-        <div class="btn-filtros p-1">
+        <h1 class="display-5 text-center">Los mejores restaurantes de Madrid </h1>
+        <div class="btn-filtros p-1 d-flex justify-content-center">
             <a class="btn btn-danger rounded-pill mx-2" role="button">Puntuacion</a>
             <a class="btn btn-danger rounded-pill mx-2" role="button">Comentarios</a>
-            <a class="btn btn-danger rounded-pill mx-2" role="button">Ciudad</a>
         </div>
     </div>
 </div>
 
 <div class="row">
-    <div class="col-md-6 p-3 border-top border-bottom d-md-flex flex-md-wrap" *ngFor="let restaurante of restauranteService.restaurantes">
-        <div class="imagenRestaurante">
+    <div class="col-md-6 p-3 border-top border-bottom d-md-flex flex-md-wrap cardRestaurante" *ngFor="let restaurante of restauranteService.restaurantes">
+        <div class="imagenRestaurante" routerLink="/restaurantes/{{restaurante._id}}">
             <img src="assets/img/{{restaurante.foto}}" alt="imagen restaurante">
         </div>
         <div class="datosRestaurante">
-            <a name="" id="" class="btn btn-warning" href="#" role="button">{{restaurante.tipo}}</a>
-            <p>{{restaurante.nombre}}</p>
-            <p>{{restaurante.ubicacion}}</p>
+            <a name="" id="" class="btn btn-warning mb-3 btn-tipo" role="button">{{restaurante.tipo}}</a>
+            <p >{{restaurante.nombre}}</p>
+            <p class="nombre-localidad">{{restaurante.ubicacion}}</p>
+            <p><img class="masInfo" src="assets/img/likes.png" alt="">{{ restaurante.likes }}</p>
+            <p><img class="masInfo" src="assets/img/comentario.png" alt="">{{ restaurante.comentarios.length }}</p>
         </div>
     </div>
 </div>
