--- a/src/app/componentes/restaurante-detalle/restaurante-detalle.component.html
+++ b/src/app/componentes/restaurante-detalle/restaurante-detalle.component.html
@@ -1,19 +1,24 @@
-<div class="row">
+<div class="row d-md-flex justify-content-md-center">
     <div class="col-md-6">
         <div id="carouselId" class="carousel slide my-4" data-bs-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-bs-target="#carouselId" data-bs-slide-to="0" class="active"></li>
-                <li data-bs-target="#carouselId" data-bs-slide-to="1"></li>
-                <li data-bs-target="#carouselId" data-bs-slide-to="2"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="carousel-item active">
-                    <img src="" class="d-block w-100" alt="First slide">
+                    <img src="assets/img/{{ resSelected.foto }}" class="d-block w-100" alt="First slide">
                 </div>
             </div>
         </div>
+        <!-- <div class="comentarios">
+            {{resSelected.comentarios}}
+        </div> -->
     </div>
     <div class="col-md-6">
-        <h2>ID: {{ id }} </h2>
+        <h3> {{resSelected.nombre}} </h3>
+        <p class="txt-descripcion">{{ resSelected.descripcion }}</p>
+    </div>
+    <div class="btn-volver">
+        <a class="btn btn-danger" routerLink="/restaurantes"  role="button">Volver</a>
     </div>
 </div>
