--- a/src/app/componentes/restaurantes/restaurantes.component.html
+++ b/src/app/componentes/restaurantes/restaurantes.component.html
@@ -27,8 +27,8 @@
 </div>
 
 <div class="row">
-    <div class="col-md-6 p-3 border-top border-bottom d-md-flex flex-md-wrap cardRestaurante" *ngFor="let restaurante of restauranteService.restaurantes">
-        <div class="imagenRestaurante" routerLink="/restaurantes/{{restaurante._id}}">
+    <div class="col-md-6 p-3 border-top border-bottom d-md-flex flex-md-wrap cardRestaurante" *ngFor="let restaurante of restaurantes">
+        <div class="imagenRestaurante" routerLink="/restaurantes/{{ restaurante._id }}">
             <img src="assets/img/{{restaurante.foto}}" alt="imagen restaurante">
         </div>
         <div class="datosRestaurante">
