Funcion para listar por puntuacion de mayor a menor hecho

--- a/src/app/componentes/nav/nav.component.css
+++ b/src/app/componentes/nav/nav.component.css
@@ -12,3 +12,9 @@
 .btn-login{
     font-family: 'Roboto', sans-serif !important;
 }
+
+.dropdown-menu[data-bs-popper] {
+    top: 100% !important;
+    left: -45px !important;
+    margin-top: 0.125rem !important;
+}
