--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -15,6 +15,16 @@
             <ul id="menuNav" class="navbar-nav ml-auto ms-auto">
                 <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" routerLink="/restaurantes" >Restaurantes</a></li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Mas
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                      <li><a class="dropdown-item" href="#">Sobre Nosotros</a></li>
+                      <li><a class="dropdown-item" href="#">Accesibilidad</a></li>
+                      <li><a class="dropdown-item" href="#">Licencia</a></li>
+                    </ul>
+                  </li>
                 <a id="btn-login" class="btn btn-danger rounded" routerLink="/login" role="button">Login</a>
                 <!--Aqui hay que colocar un submenu-->
             </ul>
