--- a/src/app/componentes/restaurante-detalle/restaurante-detalle.component.html
+++ b/src/app/componentes/restaurante-detalle/restaurante-detalle.component.html
@@ -18,6 +18,7 @@
         <h3> {{resSelected.nombre}} </h3>
         <p class="txt-descripcion">{{ resSelected.descripcion }}</p>
     </div>
+    <div class="comentarios">{{ resSelected.comentarios }}</div>
     <div class="btn-volver">
         <a class="btn btn-danger" routerLink="/restaurantes"  role="button">Volver</a>
     </div>
