--- a/src/app/componentes/restaurantes/restaurantes.component.html
+++ b/src/app/componentes/restaurantes/restaurantes.component.html
@@ -20,7 +20,7 @@
     <div class="col">
         <h1 class="display-5 text-center">Los mejores restaurantes de Madrid </h1>
         <div class="btn-filtros p-1 d-flex justify-content-center">
-            <a class="btn btn-danger rounded-pill mx-2" role="button">Puntuacion</a>
+            <a class="btn btn-danger rounded-pill mx-2" role="button" (click)="getRestaurantePuntuacion()">Puntuacion</a>
             <a class="btn btn-danger rounded-pill mx-2" role="button">Comentarios</a>
         </div>
     </div>
