--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 offset-md-3">
-            <h2 class="text-center text-dark mt-5">Inicie sesión</h2>
+            <h2 class="text-center text-dark mt-5">Iniciar sesión</h2>
             <div class="card my-5">
 
-                <form class="card-body cardbody-color p-lg-5">
+                <form class="card-body cardbody-color p-lg-5" (submit)="iniciarSesion()">
 
                     <div class="text-center">
                         <img src="assets/img/user-login.png"
@@ -13,15 +13,16 @@
                     </div>
 
                     <div class="mb-3">
-                        <input type="text" class="form-control" id="Username" aria-describedby="emailHelp"
-                            placeholder="User Name">
+                        <input type="email" name="email" [(ngModel)]="user.email" class="form-control" id="Username" aria-describedby="emailHelp"
+                            placeholder="example@tgt.com">
                     </div>
                     <div class="mb-3">
-                        <input type="password" class="form-control" id="password" placeholder="password">
+                        <input type="password" name="password" [(ngModel)]="user.password"  class="form-control" id="password" placeholder="·······">
                     </div>
                     <div class="text-center"><button type="submit" class="btn btn-color px-5 mb-5 w-100">Entrar</button>
                     </div>
-                    <div id="emailHelp" class="form-text text-center mb-5 text-dark">¿No estás registrado? <a routerLink="/" class="text-dark fw-bold">Create una cuenta</a>
+                    <div id="emailHelp" class="form-text text-center mb-5 text-dark">¿No estás registrado? <a
+                            routerLink="/registro" class="text-dark fw-bold">Create una cuenta</a>
                     </div>
                 </form>
             </div>
