--- a/src/app/componentes/nav/nav.component.html
+++ b/src/app/componentes/nav/nav.component.html
@@ -1,4 +1,3 @@
-
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" routerLink="/">
@@ -12,21 +11,26 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul id="menuNav" class="navbar-nav ml-auto ms-auto">
-                <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" routerLink="/restaurantes" >Restaurantes</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Mas
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Sobre Nosotros</a></li>
-                      <li><a class="dropdown-item" href="#">Accesibilidad</a></li>
-                      <li><a class="dropdown-item" href="#">Licencia</a></li>
-                    </ul>
-                  </li>
-                <a id="btn-login" class="btn btn-danger rounded" routerLink="/login" role="button">Login</a>
-                <!--Aqui hay que colocar un submenu-->
+
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" routerLink="/restaurantes"
+                        routerLinkActive="active">Restaurantes</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/favoritos" routerLinkActive="active">Favoritos</a>
+                </li>
+            </ul>
+
+            <ul class="navbar-nav ms-auto">
+                <ng-container *ngIf="!authservice.estaLogueado() || !authservice.esAdmin();else logueado">
+                    <li class="nav-item">
+                        <a id="btn-login" class="btn btn-outline-danger rounded" routerLink="/login"
+                            role="button">Login</a>
+                    </li>
+                </ng-container>
+                <ng-template #logueado>
+                    <li class="nav-item">
+                        <a class="nav-link" (click)="authservice.logout()">Cerrar Sesion</a>
+                    </li>
+                </ng-template>
             </ul>
         </div>
     </div>
