--- a/src/app/componentes/restaurante-detalle/restaurante-detalle.component.html
+++ b/src/app/componentes/restaurante-detalle/restaurante-detalle.component.html
@@ -1,4 +1,4 @@
-<div class="row d-md-flex justify-content-md-center">
+<div class="row mt-3">
     <div class="col-md-6">
         <div id="carouselId" class="carousel slide my-4" data-bs-ride="carousel">
             <ol class="carousel-indicators">
@@ -10,16 +10,13 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="comentarios">
-            {{resSelected.comentarios}}
-        </div> -->
     </div>
     <div class="col-md-6">
         <h3> {{resSelected.nombre}} </h3>
         <p class="txt-descripcion">{{ resSelected.descripcion }}</p>
+        <div *ngIf="authservice.estaLogueado()"><a (click)="marcarFavorito()"><img class="like-img" src="assets/img/likes.png" alt="">Marcar como favorito</a></div>
     </div>
-    <div class="comentarios">{{ resSelected.comentarios }}</div>
     <div class="btn-volver">
-        <a class="btn btn-danger" routerLink="/restaurantes"  role="button">Volver</a>
+        <a class="btn btn-danger" routerLink="/restaurantes" role="button">Volver</a>
     </div>
 </div>
