panel de administracon de usuario incompleto, queda el formulario de registrar nuevo usuario

--- a/src/app/componentes/panel-admin/panel-admin.component.html
+++ b/src/app/componentes/panel-admin/panel-admin.component.html
@@ -10,7 +10,7 @@
             <div class="card-body">
               <h5 class="card-title">Restaurantes</h5>
               <p class="card-text">Gestion de restaurantes</p>
-              <a href="#" class="btn btn-danger">Gestionar</a>
+              <a routerLink="/gestionRestaurantes" class="btn btn-danger">Gestionar</a>
             </div>
           </div>
 
@@ -19,7 +19,7 @@
             <div class="card-body">
               <h5 class="card-title">Usuarios</h5>
               <p class="card-text">Gestion de usuarios</p>
-              <a href="#" class="btn btn-danger">Gestionar</a>
+              <a routerLink="/gestionUsuarios" class="btn btn-danger">Gestionar</a>
             </div>
           </div>
     </div>
