--- a/src/app/componentes/restaurantes/restaurantes.component.css
+++ b/src/app/componentes/restaurantes/restaurantes.component.css
@@ -52,3 +52,19 @@
 .nombre-localidad{
     font-weight: 300 !important;
 }
+
+::-webkit-input-placeholder {
+    text-align: center;
+ }
+ 
+ :-moz-placeholder { /* Firefox 18- */
+    text-align: center;  
+ }
+ 
+ ::-moz-placeholder {  /* Firefox 19+ */
+    text-align: center;  
+ }
+ 
+ :-ms-input-placeholder {  
+    text-align: center; 
+ }
