--- a/src/app/componentes/gestion-restaurantes/gestion-restaurantes.component.html
+++ b/src/app/componentes/gestion-restaurantes/gestion-restaurantes.component.html
@@ -20,27 +20,29 @@
                     <td>{{ restaurante.tipo }}</td>
                     <td>{{ restaurante.ubicacion }}</td>
                     <td>{{ restaurante.likes}}</td>
-                    <td><fa-icon [icon]="faEdit" size="lg"></fa-icon></td>
-                    <td (click)="eliminarRestaurante(restaurante._id)"><fa-icon [icon]="faTrash" size="lg"></fa-icon></td>
+                    <td class="text-primary" (click)="editRestaurante(restaurante)" ><fa-icon [icon]="faEdit" size="lg"></fa-icon></td>
+                    <td class="text-danger" (click)="eliminarRestaurante(restaurante._id)"><fa-icon [icon]="faTrash" size="lg"></fa-icon></td>
                 </tr>
             </tbody>
         </table>
     </div>
     <div class="col">
-        <h1 class="text-center my-4">Nuevo Restaurante</h1>
+        <h1 class="text-center my-4">Datos</h1>
         <div class="container text-white">
             <div class="form">
                 <!--damos un nombre al formulario al formulario-->
                 <!--le decimos que en el evento submit llama a nuestra funcion addRestaurante que es la que esta en el .ts y le pasamos nuestro formulario-->
                 <form class="login-form" #restauranteForm="ngForm" (ngSubmit)="addRestaurante(restauranteForm)">
                     <!--para coger los valores de los inputs es con [(ngModel)] y le decimos que de nuestro servicio al objeto restaurante que propiedad vamos a guardar-->
+                    <input type="hidden" name="_id" [(ngModel)]="restauranteservice.restaurante._id">
                     <input type="text" required name="nombre" placeholder="Nombre" [(ngModel)]="restauranteservice.restaurante.nombre" />
                     <input type="text" required name="tipo" placeholder="Tipo" [(ngModel)]="restauranteservice.restaurante.tipo" />
                     <input type="text" required name="ubicacion" placeholder="Ubicacion" [(ngModel)]="restauranteservice.restaurante.ubicacion" />
                     <input type="number" required name="likes" placeholder="Inserte numero" [(ngModel)]="restauranteservice.restaurante.likes" />
                     <textarea name="descripcion" cols="30" rows="6" placeholder="Escribe una descripcion" [(ngModel)]="restauranteservice.restaurante.descripcion"></textarea>
                     <input type="text" required name="foto" placeholder="ej: pulpo.jpg" [(ngModel)]="restauranteservice.restaurante.foto" />
-                    <button class="bg-danger">Anadir</button>
+                    <button class="bg-danger">Añadir</button>
+                    <!-- <button class="bg-primary mt-2" (click)="resetForm(restauranteForm)">Limpiar</button> -->
                 </form>
             </div>
         </div>
