ya se puede add restaurantes desde el panel de administracion

--- a/src/app/componentes/favoritos/favoritos.component.html
+++ b/src/app/componentes/favoritos/favoritos.component.html
@@ -1,1 +1,8 @@
-<p>favoritos works!</p>
+<div class="row">
+    <div class="col">
+        <h1 class="display-1 text-center">Proximamente disponible</h1>
+        <div class="container">
+            <img src="assets/img/under_construction.jpg" alt="en construccion" class="img-fluid" >
+        </div>
+    </div>
+</div>
