--- a/src/app/componentes/gestion-restaurantes/gestion-restaurantes.component.html
+++ b/src/app/componentes/gestion-restaurantes/gestion-restaurantes.component.html
@@ -48,3 +48,8 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col">
+        <button class="btn btn-danger" routerLink="/panelAdmin">Volver</button>
+    </div>
+</div>
