--- a/src/app/componentes/gestion-usuarios/gestion-usuarios.component.html
+++ b/src/app/componentes/gestion-usuarios/gestion-usuarios.component.html
@@ -38,3 +38,8 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col">
+        <button class="btn btn-danger" routerLink="/panelAdmin">Volver</button>
+    </div>
+</div>
