--- a/src/app/componentes/restaurante-detalle/restaurante-detalle.component.html
+++ b/src/app/componentes/restaurante-detalle/restaurante-detalle.component.html
@@ -10,11 +10,16 @@
                 </div>
             </div>
         </div>
+        <div class="iconos text-center">
+            <img src="assets/img/apple-pay.png" class="mx-4" alt="apple-pay">
+            <img src="assets/img/google-pay.png" alt="google-pay">
+        </div>
     </div>
     <div class="col-md-6">
         <h3> {{resSelected.nombre}} </h3>
         <p class="txt-descripcion">{{ resSelected.descripcion }}</p>
-        <div *ngIf="authservice.estaLogueado()"><a (click)="marcarFavorito()"><img class="like-img" src="assets/img/likes.png" alt="">Marcar como favorito</a></div>
+        <div *ngIf="authservice.estaLogueado()"><a (click)="marcarFavorito()"><img class="like-img"
+                    src="assets/img/likes.png" alt="">Marcar como favorito</a></div>
     </div>
     <div class="btn-volver">
         <a class="btn btn-danger" routerLink="/restaurantes" role="button">Volver</a>
